# web_to_epub

./: .gitignore  README.md  main.py  parse.py  pyproject.toml  settings.py  test.py
output/: README.md
src/: cover.py  parse.py  settings.py  web_book.py
template/: README.md  template_test.yml
template_test/: template.yml
tests/: test_parse.py  test_settings.py  test_web_book.py
